# kutacc

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  README_en.md  build.sh
cmake/: libkutacc_source_files.cmake
include/: kutacc.h
src/: CMakeLists.txt
src/activation/: relu.h  sigmoid.h  silu.h
src/attention/: gating_attention.cpp  global_attention.cpp  invariant_point.cpp  outer_product_mean.cpp  rigid.cpp  rigid.h  transition.cpp  triangle_multiplication.cpp
src/comm/: all_gather.cpp  kupl.cpp  kupl.h  transpose.cpp
src/linear/: linear.cpp  mm.cpp  mm.h
src/math/: fast_exp.h
src/normalization/: layernorm.cpp  layernorm_kernel.h
src/softmax/: softmax.h
src/tensor/: tensor.cpp  tensor.h
src/utils/: blas.cpp  blas.h  check.cpp  check.h  collapse.h  kutacc_malloc.cpp  kutacc_malloc.h  memory.h  parallel.h
src/version/: version.cpp
src/wrapper/: scalar_of.h  svcnt.h  svcvt.h  svdup.h  svld1.h  svldnt1.h  svst1.h  svwhilelt.h  vector_of.h  wrapper-incl.h  wrapper.h
test/: test_all.sh
test/functest/: CMakeLists.txt
test/functest/cal/: func_test_main.cpp  gating_attention_test.cpp  global_attention_test.cpp  invariant_point_test.cpp  outer_product_mean_test.cpp  rigid_test.cpp  transition_test.cpp  triangle_multiplication_test.cpp
test/functest/comm/: all_gather_test.cpp  func_test_main.cpp  transpose_test.cpp
